[project]
name = "ukroutes"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "cudf-cu12>=24.4.1",
    "cugraph-cu12>=24.4.0",
    "geopandas>=0.14.4",
    "polars>=0.20.31",
    "scipy>=1.13.1",
    "rich>=13.7.1",
    "pyogrio>=0.8.0",
    "tqdm>=4.66.4",
    "matplotlib>=3.9.0",
    "pyqt6>=6.7.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
]

[tool.rye.scripts]
requirements = "pip compile pyproject.toml -o requirements.txt"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ukroutes"]
