[project]
name = "ukroutes"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "networkx>=3.3",
    "tqdm>=4.66.4",
    "pandas>=2.2.2",
    "scipy>=1.14.0",
    "pyarrow>=17.0.0",
    "geopandas>=1.0.1",
    "polars>=1.5.0",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
]

[tool.rye.scripts]
requirements = "pip compile pyproject.toml -o requirements.txt"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ukroutes"]
